Add instructions for IntelliJ setup.